# MCP

./: .gitignore  pyproject.toml
Client-Server/: client.py  local_server.py  main.py  pyproject.toml  streamlit_client.py
DemoLocalServer/: main.py  pyproject.toml
DemoRemoteServer/: main.py  pyproject.toml
ExpenseTracker/: expenses.db  main.py  pyproject.toml
