[project]
name = "mcp-workspace"
version = "0.1.0"
description = "My MCP Server Collection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]

[tool.uv.workspace]
members = [
    "DemoServer",
    "ExpenseTracker",
    "DemoRemoteServer",
    "Client-Server",
]
